[package]
name = "tracing-cloudchamber"
version = "0.1.0"
edition = "2021"
links = "tracingcc"

[lib]
path = "src/lib.rs"

[dependencies]
cxx = { version = "1.0", features = [ "c++17"] }
tracing = "0.1"
tracing-core = "0.1"
# tracing = { git = "https://github.com/tokio-rs/tracing", tag = "tracing-core-0.1.33", version = "0.1" }
# tracing-core = { git = "https://github.com/tokio-rs/tracing", tag = "tracing-core-0.1.33", version = "0.1" }

[build-dependencies]
cxx-build = { version = "1.0", features = ["parallel"] }

[profile.dev]
opt-level = 1             
