[package]
name = "tracing-cloudchamber"
version = "0.1.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ryex/tracing-cloudchamber"
description = """
Extend tracing with an ffi via cxx to emit events and create spans in C++
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
    "no-std",
]
keywords = ["logging", "tracing", "metrics", "async"]
edition = "2021"
rust-version = "1.63.0"
links = "tracingcc"

[lib]
path = "src/lib.rs"

[dependencies]
cxx = { version = "1.0", features = [ "c++17"] }
tracing = "0.1"
tracing-core = "0.1"
# tracing = { git = "https://github.com/tokio-rs/tracing", tag = "tracing-core-0.1.33", version = "0.1" }
# tracing-core = { git = "https://github.com/tokio-rs/tracing", tag = "tracing-core-0.1.33", version = "0.1" }

[build-dependencies]
cxx-build = { version = "1.0", features = ["parallel"] }

[profile.dev]
opt-level = 1             
